2010-03-22  Chris Toshok  <toshok@ximian.com>

	* Dispatcher.cs (InvokeDelegate): factor out all the delegate
	invoking here, and special case Action, SendOrPostCallback, and
	EventHandler.
	(Invoke): call Dispatcher.InvokeDelegate.

	* DispatcherOperation.cs (Invoke): call Dispatcher.InvokeDelegate.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DispatcherSynchronizationContext.cs: Fix compiler warnings.

2009-10-20  Andreia Gaita  <avidigal@novell.com>

	* Dispatcher.cs: use new add_dispatcher_call method
	to add tick calls

	r: rolf

2009-09-18  Jeffrey Stedfast  <fejj@novell.com>

	* DispatcherTimer.cs: Removed unused member variable.

	r:spouliot

2009-09-18  Jeffrey Stedfast  <fejj@novell.com>

	* Dispatcher.cs: Updated for DispatcherOperation API change.

	* DispatcherOperation.cs (ToString): Renamed to not clash with
	object.ToString().

	r:kangaroo

2009-08-25  Jackson Harper  <jackson@ximian.com>

	* Dispatcher.cs: This chunk is a little crashy when called from
	the finalizer, ifdef it for now.  r: shana.

2009-08-06  Chris Toshok  <toshok@ximian.com>

	* Dispatcher.cs (Dispose): time_manager_remove_tick_call takes
	another arg now.

2009-05-13  Sebastien Pouliot  <sebastien@ximian.com>

	* DispatcherOperation.cs (Invoke): Return InnerException if the
	exception thrown is a TargetInvocationException (see DRT #357)

2009-04-14  Andreia Gaita  <avidigal@novell.com>

	* Dispatcher.cs: Fix add_tick_call pinvoke (no return val),
	use flag to detect useless pinvoke calls instead.

2009-03-30  Chris Toshok  <toshok@ximian.com>

	* Dispatcher.cs: track move of TickCallHandler from
	Mono.NativeMethods to Mono.

2009-03-25  Andreia Gaita  <avidigal@novell.com>

	* DispatcherTimer.cs: Fix default duration

2009-02-22  Geoff Norton  <gnorton@novell.com>

	* Dispatcher.cs: Cache the surface when the dispatcher is created
	to avoid unnecessary M->N's and possible cross-thread problems.

2009-02-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>
